feat: add controller and router
