# routes/index.routes.js
@@ -1,5 +1,7 @@
 const router = require('express').Router();
 const students = require('./student.routes.js');
+const courses = require('./courses.routes.js');
+const notes = require('./notes.routes.js');
 
 router.get('/', (req, res) => {
     res.json({
@@ -8,5 +10,7 @@ router.get('/', (req, res) => {
 });
 
 router.use('/students', students);
+router.use('/courses', courses);
+router.use('/notes', notes);
 
 module.exports = router;
